--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -25,34 +25,43 @@
     <main>
         <div class="niveles">
             <div class="nivel1">
-                <img src="../imagenes/nivel1_01.png" alt="">
-                <p>NIVEL 1</p>
-                <p>Aqui te encontraras con los mas debiles(zombi momificado). Puede dejar caer:</p>
-                <ul>
-                    <li>Acero valyrio/netherite</li>
-                    <li>Monedas de plata</li>
-                    <li>Caos en bruto</li>
-                    <li>Cristales de mana</li>
-                    <li>Manzanas de oro</li>
-                    <li>Piel humana</li>
-                    <li>Exp</li>
-                </ul>
+                <div class="in1">
+                    <img src="../imagenes/nivel1_01.png" alt="">
+                </div>
+                <div class="ip1">
+                    <p>NIVEL 1</p>
+                    <p>Aqui te encontraras con los mas debiles<br>(zombi momificados). Pueden dejar caer:</p>
+                    <ul>
+                        <li>Acero valyrio/netherite</li>
+                        <li>Monedas de plata</li>
+                        <li>Caos en bruto</li>
+                        <li>Cristales de mana</li>
+                        <li>Manzanas de oro</li>
+                        <li>Piel humana</li>
+                        <li>Exp</li>
+                    </ul>
+                </div>
 
             </div>
             <div class="nivel2">
-                <img src="../imagenes/nivel2_01.png" alt="">
-                <img src="../imagenes/nivel2_02.png" alt="">
-                <p>NIVEL 2</p>
-                <p>En este monumento te encontraras con los zombi(no confundir con los comunes, pues estos tienen espada y otra skin). Pueden dejar caer:</p>
-                <ul>
-                    <li>Acero valyrio/netherite</li>
-                    <li>Monedas de plata</li>
-                    <li>Ceniza escarlata</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
+                <img src="../imagenes/nivel2_01.png" alt="" class="nivel2-01">
+                <img src="../imagenes/nivel2_02.png" alt="" class="nivel2-02">
+                <div class="pn2">
+                    <p>NIVEL 2</p>
+                    <p>En este monumento te encontraras con los zombi(no confundir con los comunes, pues estos tienen espada y otra skin). Pueden dejar caer:</p>
+                    <ul>
+                        <li>Acero valyrio/netherite</li>
+                        <li>Monedas de plata</li>
+                        <li>Ceniza escarlata</li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    
+                </div>
+                <img src="../imagenes/nivel2_03.png" alt="" class="nivel2-03">
+                <img src="../imagenes/nivel3_entrada.png" alt="" class="nivel2-puerta-a-3">
 
             </div>
             <div class="nivel3">
