--- a/mundo rpg/spawn.html
+++ b/mundo rpg/spawn.html
@@ -17,14 +17,14 @@
         <nav class="nave">
             <span>IP</span>
             <a href="../index.html">Menu</a>
-            <a href="">Mundo RPG</a>
+            <a href="spawn.html">Mundo RPG</a>
             <a href="">Mundo Survival</a>
             <a href="">Skyblock</a>
         </nav>
     </header>
     <main class="spawncj">
         <div class="div1">
-            <a href=""><!--RPG-->
+            <a href="rpg.html"><!--RPG-->
             <img src="../imagenes/puerta.jpg" alt="">
             <p class="p">RPG</p>
             <p class="p2">Niveles basicos del modo RPG y sus dropeos</p>
