--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -48,15 +48,13 @@
                 <img src="../imagenes/nivel2_02.png" alt="" class="nivel2-02">
                 <div class="pn2">
                     <p>NIVEL 2</p>
-                    <p>En este monumento te encontraras con los zombi(no confundir con los comunes, pues estos tienen espada y otra skin). Pueden dejar caer:</p>
+                    <p>En este monumento te encontraras con los zombi(no confundir con los comunes, pues estos tienen espada y otra skin).<br> Pueden dejar caer:</p>
                     <ul>
                         <li>Acero valyrio/netherite</li>
                         <li>Monedas de plata</li>
                         <li>Ceniza escarlata</li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Manzanas doradas</li>
+                        <li>Diamante</li>
                     </ul>
                     
                 </div>
@@ -65,9 +63,34 @@
 
             </div>
             <div class="nivel3">
+                <img src="../imagenes/nivel3_01" alt="">
+                <div>
+                    <p>NIVEL 3</p>
+                    <p>Aqui te encontraras con mineros que se pudrieron al pasar los años, conocidos como. Que dejaran caer</p>
+                    <ul>
+                        <il>Acero valyrio/Netherite</il>
+                        <il>Monedas de oro</il>
+                        <il>Monedas de Plata</il>
+                        <il>Manzanas doradas</il>
+                        <il>Diamantes</il>
+                        <il>Esencia de fuego</il>
+                    </ul>
+                </div>
+                <img src="../imagenes/nivel3_02" alt="">
 
             </div>
             <div class="nivel4">
+                <img src="../imagenes/nivel4_01.png" alt=""  class="nivel4_01">
+                <div class="nivel4_parrafo">
+                    <p>NIVEL 4</p>
+                    <p>En este pueblo, las defensas seran las enemigas. Aunque no se crea, estos dejaran caer:</p>
+                    <ul>
+                        <li>Monedas de plata</li>
+                        <li>Monedas de oro</li>
+                        <li>Polvo estelar</li>
+                    </ul>
+                </div>
+                <img src="../imagenes/nivel4_03.png" alt=""  class="nivel4_02">
 
             </div>
             <div class="nivel5">
