--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -63,9 +63,9 @@
 
             </div>
             <div class="nivel3">
-                <img src="../imagenes/nivel3_01" alt="">
+                <img src="../imagenes/nivel3_01" alt="" class="nivel3_01">
                 <div>
-                    <p>NIVEL 3</p>
+                    <p  class="nivel3_parrafo">NIVEL 3</p>
                     <p>Aqui te encontraras con mineros que se pudrieron al pasar los años, conocidos como. Que dejaran caer</p>
                     <ul>
                         <il>Acero valyrio/Netherite</il>
@@ -76,7 +76,7 @@
                         <il>Esencia de fuego</il>
                     </ul>
                 </div>
-                <img src="../imagenes/nivel3_02" alt="">
+                <img src="../imagenes/nivel3_02" alt="" class="nivel3_02">
 
             </div>
             <div class="nivel4">
