14/04:ya me voy a dormir

--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -63,20 +63,20 @@
 
             </div>
             <div class="nivel3">
-                <img src="../imagenes/nivel3_01" alt="" class="nivel3_01">
+                <img src="../imagenes/nivel3_01.png" alt="" class="nivel3_01">
                 <div>
                     <p  class="nivel3_parrafo">NIVEL 3</p>
-                    <p>Aqui te encontraras con mineros que se pudrieron al pasar los años, conocidos como. Que dejaran caer</p>
+                    <p>Aqui te encontraras con mineros que se pudrieron al pasar los años, conocidos como Minero[N]. Que dejaran caer:</p>
                     <ul>
-                        <il>Acero valyrio/Netherite</il>
-                        <il>Monedas de oro</il>
-                        <il>Monedas de Plata</il>
-                        <il>Manzanas doradas</il>
-                        <il>Diamantes</il>
-                        <il>Esencia de fuego</il>
+                        <li>Acero valyrio/Netherite</li>
+                        <li>Monedas de oro</li>
+                        <li>Monedas de Plata</li>
+                        <li>Manzanas doradas</li>
+                        <li>Diamantes</li>
+                        <li>Esencia de fuego</li>
                     </ul>
                 </div>
-                <img src="../imagenes/nivel3_02" alt="" class="nivel3_02">
+                <img src="../imagenes/nivel3_02.png" alt="" class="nivel3_02">
 
             </div>
             <div class="nivel4">
@@ -94,21 +94,80 @@
 
             </div>
             <div class="nivel5">
+                <img src="../imagenes/nivel5_01.png" alt="" class="nivel5_01">
+                <div class="nivel5_parrafo">
+                    <p>NIVEL 5</p>
+                    <p>En esta extensa granja encontraras granjeros que fueron zombificados.</p>
+                </div>
+                <img src="../imagenes/nivel5_02.png" alt="" class="nivel5_02">
 
             </div>
             <div class="nivel6">
-
+                <img src="../imagenes/nivel6_01.png" alt="" class="nivel6_01">
+                <div class="nivel6_parrafo">
+                    <p>NIVEL 6</p>
+                    <p>En esta aldea azotada por los golems dejaran caer:</p>
+                    <ul>
+                        <li>Monedas de oro</li>
+                        <li>Monedas de plata</li>
+                        <li>Netherite/Acero valyrio</li>
+                        <li>Caos en bruto</li>
+                        <li>Cristales de mana</li>
+                        <li>Ceniza escarlata</li>
+                        <li>Pocion de endurecimiento Golem</li>
+                        <li>Placas de Acero</li>
+                    </ul>
+                </div>
+                <img src="../imagenes/nivel6_02.png" alt="" class="nivel6_02">
             </div>
             <div class="nivel7">
+                <img src="../imagenes/nivel7_01.png" alt="" class="nivel7_01">
+                <div class="nivel7_parrafo">
+                    <p>NIVEL 7</p>
+                    <p>Esta ciudad sumergida acecha peligros que se pueden saltear facilmente.</p>
+                </div>
+                <img src="../imagenes/nivel7_02.png" alt="" class="nivel7_02">
 
             </div>
             <div class="nivel8">
+                <img src="../imagenes/nivel8_01.png" alt="" class="nivel8_01">
+                <div class="nivel8_parrafo">
+                    <p> NIVEL 8 </p>
+                    <p>En este pueblo repleto de automatas de mithril rige la palabra del automata dorado, tambien se encuentra el portal al nivel 9. Dejan caer:</p>
+                    <ul>
+                        <li>[Llave del boss]</li>
+                        <li>Placas de Mithril</li>
+                        <li>Cristal de mana</li>
+                        <li>Moneda de oro</li>
+                        <li>Moneda de plata</li>
+                        <li>Lingotes de lingotes de(monedas de)oro</li>
+                        <li>Caos en bruto</li>
+                    </ul>
+                </div>
+                <img src="../imagenes/nivel8_02.png" alt="" class="nivel8_02">
+
 
             </div>
             <div class="nivel9">
+                <img src="../imagenes/nivel8_portal.png" alt="" class="nivel8_portal">
+                <img src="../imagenes/nivel9_pueblo.png" alt="" class="n9pueblo">
+                <div class="n9p">
+                    <p>NIVEL 9</p>
+                    <p>Este nivel desertico dividido en dos partes tiene como jefe a anubis. Se deja caer:</p>
+                </div>
+                <img src="../imagenes/nivel9_piramide.png" alt="" class="n9piramide">
+                <img src="../imagenes/nivel9_anubis.png" alt="" class="n9a">
 
             </div>
             <div class="nivel10">
+                <img src="../imagenes/nivel10_01.png" alt="" class="n101">
+                <img src="../imagenes/nivel10_02.png" alt="" class="n102">
+                <div class="n10p">
+                    <p>NIVEL 10</p>
+                    <p>En este pueblo maya te encontraras con los mas fuertes. Estos dejaran caer:</p>
+                </div>
+                <img src="../imagenes/nivel10_03.png" alt="" class="n103">
+                <img src="../imagenes/nivel10_04.png" alt="" class="n104">
 
             </div>
         </div>
