16/04 Empezando el dia

--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -172,6 +172,12 @@
             </div>
         </div>
     </main>
+    <footer>
+        <div>
+            <img src="../imagenes/novalogo.png" alt="">
+            <p>Derechos reservados. Servidor creado por Lobitodo.</p>
+        </div>
+    </footer>
     
 </body>
 </html>
