--- a/mundo rpg/rpg.html
+++ b/mundo rpg/rpg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>NIVELES - RPG</title>
     <link rel="stylesheet" href="../css/rpg.css">
 </head>
 <body>
@@ -17,7 +17,7 @@
         <nav class="nave">
             <span>IP</span>
             <a href="../index.html">Menu</a>
-            <a href="">Mundo RPG</a>
+            <a href="spawn.html">Mundo RPG</a>
             <a href="">Mundo Survival</a>
             <a href="">Skyblock</a>
         </nav>
