--- a/mundo rpg/spawn.html
+++ b/mundo rpg/spawn.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SPAWN - RPG</title>
     <link rel="stylesheet" href="../css/spawnrpg.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
             </a>
         </div>
         <div class="div3">
-            <a href=""><!--COMERCIOS Y MISIONES-->
+            <a href="cym.html"><!--COMERCIOS Y MISIONES-->
             <img src="../imagenes/Comercios.png" alt="">
             <p class="p">COMERCIOS Y MISIONES</p>
             <p class="p2">Misiones, cosas utiles y mas!</p>
